# knn_python_library

./: .gitignore  README.md  pyproject.toml
src/knn.egg-info/: PKG-INFO  SOURCES.txt
src/knn_package/: KNN.py  __init__.py  utils.py
tests/: test_model.py
