[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knn"
version = "0.0.1"
dependencies = ["numpy", "math"]
authors = [{name = "Dhairya Chopra", email = "dhairyachopra2005@gmail.com"}]
description = "K-Nearest Neighbors model"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/GGBoss101/knn_python_library"
Issues = "https://github.com/GGBoss101/knn_python_library/issues"
